# vcdvis

./: .gitignore  LICENSE  Makefile  README.md  config.json  config.json.example  pyproject.toml  signal.py  timestamp.py  value.py  vcd_parser.py  vcd_signal.py  vcdvis.py
.github/workflows/: ci.yml  test.yml
printer/: ascii.py  latex.py
src/vcdvis/: timestamp.py  value.py  vcd_parser.py  vcd_signal.py  vcdvis.py
src/vcdvis/printer/: ascii.py
tests/: test_main.py
vcdvis/: __init__.py  vcdvis.py
vcdvis/printer/: latex.py
