[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcdvis"
version = "0.1.0"
description = "Convert your value change dumps into TikZ figures or visualize them in ASCII"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "vcdvis contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

[project.scripts]
vcdvis = "vcdvis:main"

